<resources>
    <string name="app_name">Get Daily Diamonds FF Tips</string>
    <string name="ads_loader">Loading Ads....</string>
    <string name="fb_testing">f75de721-f449-47e1-bbd4-6d3a2e8962f5</string>
    <string name="des_correct_landing_point">➺ Choosing a landing point is only the first step to victory.
        \n\n➺ Although it may seem trivial, it is not.
        \n\n➺ Determining where to stare the game correctly.
        \n\n➺ The important thing is to choose a place that is isolated from other players, very close to the city, but not so close.
        \n\n➺ So, that best option is to fall from the town, observe where other people full and enter to explore.
        \n\n➺ It is very important that we don\'t expose ourselves too much before we don\'t have the proper equipment, especially
    when we are everywhere both quantity and quality are robbed, there will be players in many places.</string>
    <string name="correct_landing_point">Choose The Correct Landing Point</string>
    <string name="complate_game_archi">Complate in Game Achievements</string>
    <string name="des_complate_game_archi">➺ FF has a variety of in-game achievements that players can complete to earn rewards such as diamonds, gold coins, character skins, and weapon skins.
    \n\n➺ Achievements are categorized into different types,such as combat, survival, and teamwork.

    <font Textstyle="bold" color="#376e9d" size="18">\n\n➺ Here are some tips for completing in-game
    achievements in FF: </font>

    \n\n1. Check the achievement list: Open the achievement
    list and check which achievements are available.
    Focus on the ones that offer rewards you are
    interested in.

   \n\n2. Choose achievements that match your playable:
    Each achievement requires different skills and
    strategies, so choose the ones that match your
    playable.

    \n\n3. Set achievable goals: Some achievements require
    a lot of effort and time to complete, so set achievable
    goals and focus on completing them one at a time.

    \n\n4. Play with friends: Some achievements require you to
    play with friends or in a team. Playing with friends can
    make completing these achievements easier and more
    enjoyable.</string>
    <string name="miletary_site">Explore Military Sites</string>
    <string name="des_miletary_site">➺ If there is no enemy in sight, it is a good idea to explore attractions such as watch towers, containers,
    battle es or military tents.
        \n\n➺ In these places, there are usually a lot of loot.
    \n\n➺ It is not very wish to explore these areas from the beginning, but if we do it in the middle of the game, there will always be a lot to do. There will definitely be
    fewer players lurking to destroy us.
    \n\n➺ In such places, kits are usually found to improve bulletproof vests.
        \n\n➺ Please pay attention when exploring, because although you can wear a first-level vest, it is strongly recommended that you upgrade it as soon as possible.
        \n\n➺ The last player will always have powerful weapons.
    </string>
    <string name="complete_mission">Complete Mission</string>
    <string name="des_complete_mission">➺ FF offers a variety of missions that players can complete to earn rewards, including character
        vouchers, weapon skins, and diamonds.
        \n\n➺ The missions can be found in the missions section of the game and are updated regularly with new challenges and rewards.
        \n\n➺ There are different types of missions in FF, including daily missions, weekly missions, and event missions.
       \n\n➺ Daily missions reset every day and offer smaller rewards, while weekly missions reset every week and offer larger rewards. Event missions are tied to specific in-game events and offer unique rewards.

        <font Textstyle="bold" color="#376e9d" size="18">\n\nHere are some tips for completing missions in FF:</font>

        \n\n❖ Check the mission requirements:
        \n➺ Some missions have specific requirements, such as playing a certain game mode or using a specific character.
        \n➺ Make sure to check the requirements before starting the mission to avoid wasting time.

        \n\n❖ Play with friends:
        \n➺ Some missions require you to play with friends or in a team.
        \n➺ Playing with friends can make completing these missions easier and more enjoyable.

        \n\n❖ Complete multiple missions at once:

        \n➺ Some missions have similar objectives, so try to complete multiple missions at once to save time.</string>
    <string name="daily_login">Daily Login Rewards</string>
    <string name="des_daily_login"><font Textstyle="bold" color="#376e9d" size="18">Fire, here is some information about the daily login rewards:</font>

        \n\n➺ FF offers daily login rewards to players who log into the game on a daily basis.
        \n\n➺ These rewards can include various items such as character vouchers, weapon skins, and diamonds.
        \n\n➺ The rewards increase in value the more consecutive days you log in, up to a maximum of 30 days.
        \n\n➺ If you log in for 30 consecutive days, you can earn up to 100 diamonds as a reward.

        <font Textstyle="bold" color="#376e9d" size="18">\n\nHere is an example of the daily login rewards for a 7-day consecutive login:</font>
        \n\nDay 1: Character Voucher
        \nDay 2: Diamond Royal Voucher
        \nDay 3: Weapon Royal Voucher
        \nDay 4: Gold Royal Voucher
        \nDay 5: Pet Food
        \nDay 6: Memory Fragment
        \nDay 7: Weapon Skin

        \n\n\n➺ Please note that the daily login rewards can vary based on the region and the current in-game events.
        \n\n➺ It\'s always a good idea to check the in-game events section for the latest information on the daily login rewards.</string>
    <string name="participate_event">Participate in Game Events</string>
    <string name="des_participate_event">➺ In-game events are a great way to earn rewards and experience new content in FF.
        \n\n➺ The game regularly hosts events that allow you to complete tasks and challenges in exchange for rewards such as skins, characters, and other items.
       <font Textstyle="bold" color="#376e9d" size="18">\n\nHere are some tips for participating in in-game events in FF:</font>

        \n\n1. Check the events tab: The events tab in the main menu will show you all the ongoing events and their requirements.
        \n➺ Check this tab regularly to see what events are available and what rewards you can earn.
        \n\n2. Complete event tasks: Each event has specific tasks and challenges that you need to complete to earn rewards.
        \n➺ Make sure to complete all the tasks to maximize your rewards.
        \n\n3. Participate in limited-time events: Some events are only available for a limited time.
        \n➺ Make sure to participate in these events as soon as they become available to earn the maximum rewards.
        \n\n4. Use event items: Some events give you items that can only be used during the event.
        \n➺ Make sure to use these items to complete the event tasks and earn rewards.</string>
    <string name="use_vehicle">Use The Vehicle Carefully</string>
    <string name="des_use_vehicle">➺ These vehicles are used to quickly move to other places, where there are a lot of loot and can also pass the players we found on the road without players.
\n\n➺ If we make too much sound, other players will be able to hear us.
        \n\n➺ Therefore, Please be careful when using cars, trucks and motorcycles so as not to reveal our location.
</string>
    <string name="des_zombified">➺ The Zombified Samurai Bundle is FF’s most sought-after rare pack.
        \n\n➺ This pack was launched in 2019 when the game’s player base was significantly lower.
        \n\n➺ It\’s a personalization of the ever-popular Samurai Bundle.
        \n\n➺ The set includes a magnificent mask that is sure to terrify your opponents.
        \n\n➺ This pack is slightly unusual in the game, putting it at the eighth rank on this list of top rare packs in FF.</string>
    <string name="des_artic">➺ The Arctic Blue bundle was essentially accessible in the incubator section.
        \n\n➺ The players must rely on their good fortune.
        \n\n➺ To win, they’d have to spin.
        \n\n➺ Most gamers who were really excited about this package gave it their all, but they couldn’t afford the outcome, making this another unusual outfit.</string>
    <string name="des_greencriminal">➺ The Green Criminal outfit is the most sought-after package in the game.
        \n\n➺ Due to its extreme rarity, the bundle made it to the top of the list.
        \n\n➺ This set was available during a special event in the Store’s Redeem area, where players used “Lucky Stars” to redeem it.</string>
    <string name="des_bunny">➺ One of the rarest FF bundles is the warrior bunny bundle.
        \n\n➺ This fantastic bundle was highlighted at the Draw a Bunny event by the FF game makers.
        \n\n➺ To participate in this contest, all you have to do is draw a bunny’s face.
        \n\n➺ In this bundle, you will get these items.</string>
    <string name="des_crazy">➺ One of the least appealing skins on the list is this insane Panda pack.
        \n\n➺ The first skin to be included in the Magic Cube Elite Pack was the FF bundle.
        \n\n➺ Only one Magic Cube may be obtained from the Bundle.
        \n\n➺ The Skin is a simple black hoodie with a little black panda logo design.</string>
    <string name="des_galaxy">➺ A FF Incubator featured the Blue colored galaxy Dino Bundle as one of six Dino bundles (Dinosaur Suits).
        \n\n➺ It was taken out of the incubator after a few days.
        \n\n➺ Due to its high price and distinctive style, the Blue Dino package became one of the most sought-after.
        \n\n➺ Because the Blue Dino bundle was the most difficult to obtain, it became the rarest of all the outfits.
        \n\n➺ Despite the fact that the bundle has been in the game several times, it is still one of the rarest outfits.</string>
    <string name="des_electric">➺ The electric shock bundle is another item on our list.
        \n\n➺ This package was introduced in Season 2 of Garena FF.
        \n\n➺ The character’s hair is the most appealing aspect of this bundle.
        \n\n➺ When you wear this bundle, you will notice gleaming golden hair.</string>
    <string name="beach_des">➺ Beach Party Parachute Details :\n\n➺ Appearance: The Beach Party Parachute features a colorful and festive design, with a bright pink and blue color scheme and beach-themed decorations, such as palm trees, beach balls, and umbrellas.\n The Beach Party Parachute has a durability of 100 points, which is higher than the standard parachute\'s durability.\n\n➺ Deployment: The Beach Party Parachute is deployed the same way as the standard parachute, by tapping the \"jump\" button twice while in the air.\n\n➺ Speed: The Beach Party Parachute has the same descent speed as the standard parachute, at 30 m/s.\n\n➺ Landing: Players can control their landing by steering the Beach Party Parachute towards a safe landing spot, just like with the standard parachute.\n\n➺ Customization: The Beach Party Parachute cannot be further customized or upgraded, and its appearance cannot be changed.\n\nAdvantages: The Beach Party Parachute provides a fun and playful appearance for players, which can help them stand out and lift the mood of the game.\n\n➺ Disadvantages: The Beach Party Parachute does not provide any functional advantage over the standard parachute, and its bright colors and decorations can attract more attention from enemies.</string>
    <string name="get_diamond_tips">Get Diamond Tips</string>
    <string name="parachute_details">Parachute Details</string>
    <string name="beach_party_parachute">BEACH PARTY PARACHUTE</string>
</resources>