<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".ParachuteDiamond">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tool_bar"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/parachute_details"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/adlayout">


                <RelativeLayout
                    android:layout_height="280dp"
                    android:layout_width="match_parent"
                    android:id="@+id/llAds">


                    <androidx.cardview.widget.CardView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:cardBackgroundColor="@android:color/white">

                        <FrameLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:id="@+id/nativeAd"/>

                    </androidx.cardview.widget.CardView>

                    <com.facebook.ads.NativeAdLayout
                        android:id="@+id/native_ad_container"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:orientation="vertical" />

                </RelativeLayout>

                <!--FB Native-->
                <!--FB Native Over-->

            </RelativeLayout>



            <ImageView
                android:id="@+id/paraimg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/beach"/>

            <TextView
                android:id="@+id/paraheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/dark_green"
                android:text="@string/beach_party_parachute"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginVertical="10dp"/>

            <TextView
                android:id="@+id/parainfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/dark_green"
                android:text="@string/beach_des"
                android:background="@drawable/item_stoke"
                android:padding="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"/>

            <RelativeLayout
                android:id="@+id/adlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="280dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@android:color/white">

                        <FrameLayout
                            android:id="@+id/nativeAd2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>


                </RelativeLayout>

                <!--FB Native-->
                <com.facebook.ads.NativeAdLayout
                    android:id="@+id/native_ad_container2"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:orientation="vertical" />
                <!--FB Native Over-->

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>