<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".Diamond">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tool_bar"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/mainname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/get_diamond_tips"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>


    <ScrollView
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/adlayout">


                <RelativeLayout
                    android:layout_height="280dp"
                    android:layout_width="match_parent"
                    android:id="@+id/llAds">


                    <androidx.cardview.widget.CardView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:cardBackgroundColor="@android:color/white">

                        <FrameLayout
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:id="@+id/nativeAd"/>

                    </androidx.cardview.widget.CardView>

                    <com.facebook.ads.NativeAdLayout
                        android:id="@+id/native_ad_container"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:orientation="vertical" />

                </RelativeLayout>

                <!--FB Native-->
                <!--FB Native Over-->

            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/item_stoke">

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20dp"
                    android:layout_marginVertical="5dp"
                    android:text="@string/complate_game_archi"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>


                <!--        <View-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="1dp"-->
                <!--            android:background="@color/dark_green"-->
                <!--            android:layout_marginHorizontal="20dp"/>-->

                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16dp"
                    android:text="@string/des_complate_game_archi"
                    android:textColor="@color/black"/>

            </LinearLayout>

<!--            <RelativeLayout-->
<!--                android:id="@+id/adlayout2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

<!--                <RelativeLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="280dp">-->

<!--                    <androidx.cardview.widget.CardView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        app:cardBackgroundColor="@android:color/white">-->

<!--                        <FrameLayout-->
<!--                            android:id="@+id/nativeAd2"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"/>-->
<!--                    </androidx.cardview.widget.CardView>-->


<!--                </RelativeLayout>-->

<!--                &lt;!&ndash;FB Native&ndash;&gt;-->
<!--                <com.facebook.ads.NativeAdLayout-->
<!--                    android:id="@+id/native_ad_container2"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="280dp"-->
<!--                    android:orientation="vertical" />-->
<!--                &lt;!&ndash;FB Native Over&ndash;&gt;-->

<!--            </RelativeLayout>-->


        </LinearLayout>

    </ScrollView>
</LinearLayout>